<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/back2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="226dp"
        android:layout_height="56dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="150dp"
        android:text="@string/monitortitle"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Switch
        android:id="@+id/switchTimeMonitor"
        android:layout_width="104dp"
        android:layout_height="39dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="120dp"
        android:text="@string/comment9"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Switch
        android:id="@+id/switchSensorMonitor"
        android:layout_width="124dp"
        android:layout_height="47dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="184dp"
        android:text="@string/comment34"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/round_btlogin"
        android:text="Done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="70dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        app:layout_constraintStart_toEndOf="@+id/switchTimeMonitor"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="72dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="184dp"
        app:layout_constraintStart_toEndOf="@+id/switchSensorMonitor"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="112dp"
        android:layout_height="28dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="264dp"
        android:text="@string/comment33"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="89dp"
        android:layout_height="49dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:text="0:00"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="89dp"
        android:layout_height="49dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:text="0:00"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="122dp"
        android:layout_height="28dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        android:text="@string/comment35"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="122dp"
        android:layout_height="28dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="44dp"
        android:text="@string/comment36"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

</androidx.constraintlayout.widget.ConstraintLayout>